# map-forge

./: .editorconfig  .gitignore  .prettierrc  CHANGELOG.md  CMakeLists.txt  LICENSE  components.json  eslint.config.js  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
otlib/graphics/: spriteManager.cpp  spriteManager.h
preferences/: preferences.cpp  preferences.h  preferences.ui  settings.cpp  settings.h
public/: updater.json
resources/: theme.qss
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dat_reader.rs  dat_writer.rs  lib.rs  lua_format.rs  lua_host.rs  main.rs  map_edit.rs  map_import.rs  map_load.rs  map_meta.rs  map_model.rs  map_save.rs  nodefile.rs  otb.rs  otbm.rs  otbm_footer.rs  otbm_write.rs  scripting.rs  spr_manager.rs
src-tauri/src/formats/: mod.rs
src-tauri/src/formats/tibia/: client_version.rs  otbm.rs  otbm_footer.rs  providers.rs  spr_manager.rs
src-tauri/src/materials/: doodad.rs  mod.rs  parse.rs
src/adapter/: assets.ts  biomes.ts  creatures.ts  datDecoder.ts  map.ts  mapViews.ts  materials.ts  minimap.ts  mountains.ts  palette.ts  preferences.ts  recentMaps.ts  sprites.ts
src/components/AboutDialog/: index.tsx
src/components/AssetsMissing/: index.tsx
src/components/Dock/: CornerPanel.tsx  DockablePanel.tsx  DropZone.tsx  FloatingPanel.tsx  PanelDockMenu.tsx  Resizer.tsx
src/components/ItemPropertiesPanel/: index.tsx
src/components/MapCanvas/: PenOverlay.tsx  index.tsx  types.ts
src/components/MapCanvas/CreaturePropertiesForm/: index.tsx
src/components/MapCanvas/RenderStats/: index.tsx
src/components/MapCanvas/SpawnPropertiesForm/: index.tsx
src/components/MapCanvas/TileContextMenu/: index.tsx
src/components/MapProperties/: index.tsx
src/components/MapStatistics/: index.tsx
src/components/MapTabs/: index.tsx
src/components/MapTowns/: index.tsx
src/components/Minimap/: index.tsx
src/components/PalettePanel/: BiomeEditor.tsx  BrushImage.tsx  BrushSelect.tsx  BrushThumbnail.tsx  CreatureSelect.tsx  GeneratorView.tsx  HousesList.tsx  HuntView.tsx  PaletteSearch.tsx  WaypointsList.tsx  index.tsx
src/components/Preferences/: ClientRow.tsx  ClientVersionTab.tsx  EditorTab.tsx  GeneralTab.tsx  HuntTab.tsx  index.tsx
src/components/SaveProgressModal/: index.tsx
src/components/StatusBar/: index.tsx
src/components/TilesetEditor/: BorderEditor.tsx  GroundEditor.tsx  ItemsPalette.tsx  index.tsx
src/components/TitleBar/: index.tsx
src/components/Toolbar/: index.tsx
src/components/Toolbar/AppMenu/: index.tsx
src/components/ToolsPanel/: index.tsx
src/components/UpdateIndicator/: index.tsx
src/components/UpdateIndicator/ReleaseNotes/: index.tsx
src/components/Workspace/: DockSide.tsx  DropPlaceholder.tsx  index.tsx
src/components/commons/ui/: button.tsx  menubar.tsx  popover.tsx  progress.tsx  select.tsx  separator.tsx  slider.tsx  tooltip.tsx
src/domain/: biome.ts  creature.ts  dock.ts  map.ts  mountain.ts  palette.ts  sprite.ts  thing.ts  tibia.ts  tools.ts  tooltips.ts  zones.ts
src/lib/formats/tibia/: types.ts
src/lib/generator/: generate.test.ts  generate.ts  generateMountain.ts  hunt.test.ts  hunt.ts  huntRoute.test.ts  huntRoute.ts  noise.ts
src/lib/pen/: path.test.ts  path.ts
src/styles/: index.css
src/usecase/: animation.ts  brushSprite.ts  cursors.ts  dock.ts  floors.ts  glRenderer.ts  itemPreview.ts  minimapColor.ts  penCursors.ts  positionFormat.ts  scriptedAssets.ts  spawnEdits.ts  tooltipOverlay.ts  zoom.ts
src/usecase/context/EditorSettingsContext/: index.tsx  types.ts
src/usecase/context/ToolContext/: index.tsx  types.ts
src/usecase/hooks/: useUpdater.ts
src/usecase/hooks/MapCanvas/: meshBuilder.ts  useChunkTooltips.ts  useMapCamera.ts  useMapInteraction.ts  useMapRenderer.ts  useMapScene.ts  useSelection.ts
src/usecase/hooks/Workspace/: useAppShortcuts.ts  useAssets.ts  useDock.ts  useMapSpawns.ts  useMapTabs.ts
src/usecase/hunt/: mask.ts
util/: constants.h
