[package]
name = "nosbor-map-editor"
version = "0.1.0"
description = "A Tibia OTBM map editor"
edition = "2021"

[lib]
name = "nosbor_map_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
rayon = "1.10"
lz4_flex = { version = "0.11", features = ["frame"] }
image = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.7"
